--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "antd": "2.12.0",
     "react": "15.5.4",
-    "react-dom": "15.5.4"
+    "react-dom": "15.5.4",
+    "react-router-dom": "4.1.2",    
+    "babel-polyfill": "6.23.0"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
