--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ag-grid": "12.0.0",
+    "ag-grid-react": "12.0.0",
     "antd": "2.12.0",
     "react": "15.5.4",
     "react-dom": "15.5.4",
-    "react-router-dom": "4.1.2",    
+    "react-router-dom": "4.1.2",
     "babel-polyfill": "6.23.0"
   },
   "devDependencies": {
