--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "ag-grid": "12.0.0",
     "ag-grid-react": "12.0.0",
     "antd": "2.12.0",
+    "babel-polyfill": "6.23.0",
     "react": "15.5.4",
     "react-dom": "15.5.4",
-    "react-router-dom": "4.1.2",
-    "babel-polyfill": "6.23.0"
+    "react-navigation": "^1.0.0-beta.11",
+    "react-router-dom": "4.1.2"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
